--- a/Labbar/Micke/ArduinoBluetoothCom/app/src/main/res/layout/activity_main.xml
+++ b/Labbar/Micke/ArduinoBluetoothCom/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:layout_marginBottom="200dp"/>
+        android:layout_marginBottom="100dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_server"
+        android:text="server not connected"
+        android:textAlignment="center"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_server"
+        android:text="Connect to server"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_bluetooth"
+        android:text="bluetooth not connected"
+        android:textAlignment="center"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_bt"
+        android:text="Scan for bluetooth devices"/>
 
     <LinearLayout
         android:layout_width="320dp"
