--- a/Labbar/Lab4/ArduinoBluetoothCom/app/src/main/res/layout/activity_main.xml
+++ b/Labbar/Lab4/ArduinoBluetoothCom/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/blueDevice"
-        android:text="Bluetooth example connection"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
+
+    <Spinner
+        android:id="@+id/spinner_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="200dp"/>
 
     <LinearLayout
         android:layout_width="320dp"
